--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@google-cloud/local-auth": "^2.1.0",
     "@next/font": "13.1.6",
+    "axios": "^1.3.4",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "firebase": "^9.18.0",
     "googleapis": "^105.0.0",
     "next": "13.1.6",
     "openai": "^3.1.0",
