--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "openai": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "react-responsive-carousel": "^3.2.23"
   }
 }
