--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "start-server-and-test dev 3000 cypress:open",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@next/font": "13.1.6",
     "bootstrap": "^5.2.3",
+    "cypress": "^12.8.1",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "firebase": "^9.17.1",
@@ -21,5 +24,8 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-responsive-carousel": "^3.2.23"
+  },
+  "devDependencies": {
+    "start-server-and-test": "^2.0.0"
   }
 }
