--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore .",
     "test": "start-server-and-test dev 3000 cypress:open",
     "cypress:open": "cypress open"
   },
@@ -26,6 +28,7 @@
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
+    "prettier": "^2.8.5",
     "start-server-and-test": "^2.0.0"
   }
 }
